Fixed dark mode enabled bug with prospect cards on boards

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -528,3 +528,7 @@ button:hover {
   --hover-bg: #555;
   --hover-text: #fff;
 }
+[data-theme="dark"] .board-prospect-card:not([data-custom-color]) {
+  background-color: #1f1f1f;
+  color: #f1f1f1;
+}
